--- a/bride-trx/src/main/resources/config/jdbc.properties
+++ b/bride-trx/src/main/resources/config/jdbc.properties
@@ -29,9 +29,9 @@
 #jdbc.type=mssql
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/parking_online
-jdbc.username=root
-jdbc.password=admin
+jdbc.url=jdbc:mysql://localhost:3306/backend
+jdbc.username=admin
+jdbc.password=embadmin
 jdbc.type=mysql
 
 #jdbc.driverClassName=com.mysql.jdbc.Driver
