--- a/bride-trx/src/main/resources/contextweb/web.xml
+++ b/bride-trx/src/main/resources/contextweb/web.xml
@@ -3,12 +3,12 @@
 	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-	<display-name>Parking Engine</display-name>
-	<description>Core Engine Parking</description>
+	<display-name>Bride Engine</display-name>
+	<description>Core Engine Bride</description>
 
 	<context-param>
 		<param-name>webAppRootKey</param-name>
-		<param-value>project-parking.root</param-value>
+		<param-value>project-bride.root</param-value>
 	</context-param>
 
 	<context-param>
@@ -28,13 +28,13 @@
 	</listener>
 	
 	<servlet>
-		<servlet-name>ParkingServiceServlet</servlet-name>
-		<servlet-class>com.myproject.parking.trx.servlet.ParkingServiceServlet</servlet-class>
+		<servlet-name>BrideServiceServlet</servlet-name>
+		<servlet-class>com.myproject.bride.trx.servlet.BrideServiceServlet</servlet-class>
 		<load-on-startup>5</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>ParkingServiceServlet</servlet-name>
+		<servlet-name>BrideServiceServlet</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 	
