--- a/bride-trx/src/main/resources/config/parking.properties
+++ b/bride-trx/src/main/resources/config/parking.properties
@@ -10,6 +10,8 @@ message.trxAr=Trf {0} ({3}) {2}={4} @{5}, No {1}
 message.trxArReversal=Batal Trf {0} ({3}) {2}={4} @{5}, No {1}
 
 
+rc.40000=Booking failed, duplicate time.
+
 #ERROR MESSAGE
 rc.0=Success
 rc.99=Unknown Error
