--- a/bride-trx/src/main/resources/config/parking.properties
+++ b/bride-trx/src/main/resources/config/parking.properties
@@ -11,6 +11,8 @@ message.trxArReversal=Batal Trf {0} ({3}) {2}={4} @{5}, No {1}
 
 
 rc.40000=Gagal booking tempat, silahkan pilih tanggal dan waktu yang lain.
+rc.10104=Salah Email atau Password -RC 10104
+rc.10101=User Not Found -RC 10101
 
 #ERROR MESSAGE
 rc.0=Success
