--- a/bride-trx/src/main/resources/config/parking.properties
+++ b/bride-trx/src/main/resources/config/parking.properties
@@ -13,6 +13,7 @@ message.trxArReversal=Batal Trf {0} ({3}) {2}={4} @{5}, No {1}
 rc.40000=Gagal booking tempat, silahkan pilih tanggal dan waktu yang lain.
 rc.10104=Salah Email atau Password -RC 10104
 rc.10101=User Not Found -RC 10101
+rc.10102=User already registered -RC 10102
 
 #ERROR MESSAGE
 rc.0=Success
