--- a/bride-lib/pom.xml
+++ b/bride-lib/pom.xml
@@ -13,43 +13,43 @@
 	<packaging>jar</packaging>
 	<description></description>
 	<repositories>
-	    <repository>
-	        <id>jcenter</id>
-	        <name>bintray</name>
-	        <url>http://jcenter.bintray.com</url>
-	    </repository>
+		<repository>
+			<id>jcenter</id>
+			<name>bintray</name>
+			<url>http://jcenter.bintray.com</url>
+		</repository>
 	</repositories>
-	 <dependencies>
-	 	<!-- MyBatis Spring already included in commons -->
-		<!-- <dependency>
-			<groupId>com.emobile</groupId>
-			<artifactId>smis-commons</artifactId>
-			<version>2.0.0</version>
-		</dependency> -->
-		
-		
-		<!-- Veritrans RestFull API -->	
-		<!--
-		<dependency>
-	        <groupId>id.co.veritrans</groupId>
-	        <artifactId>vt-java-client</artifactId>
-	        <version>1.0.6</version>
-	    </dependency>
-	    -->
-	    
-		
+	<dependencies>
+		<!-- MyBatis Spring already included in commons -->
+		<!-- <dependency> <groupId>com.emobile</groupId> <artifactId>smis-commons</artifactId> 
+			<version>2.0.0</version> </dependency> -->
+
+
+		<!-- Veritrans RestFull API -->
+		<!-- <dependency> <groupId>id.co.veritrans</groupId> <artifactId>vt-java-client</artifactId> 
+			<version>1.0.6</version> </dependency> -->
+
+
 		<!-- For Convert to / from JSON -->
-		<!-- <dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.11</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.codehaus.jackson</groupId> <artifactId>jackson-mapper-asl</artifactId> 
+			<version>1.9.11</version> </dependency> -->
+
 		<dependency>
-		    <groupId>com.fasterxml.jackson.core</groupId>
-		    <artifactId>jackson-databind</artifactId>
-		    <version>2.8.8.1</version>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.8.1</version>
+		</dependency>
+
 		<!-- For Connecting to REST WebServer -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -61,7 +61,7 @@
 			<artifactId>httpcore</artifactId>
 			<version>4.3.2</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
@@ -86,28 +86,28 @@
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
 		</dependency>
-		
+
 		<!-- Email Service -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-email</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-		
+
 		<!-- Commons IO handling IO / File -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
-		
+
 		<!-- Used for Encryption -->
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk16</artifactId>
 			<version>1.46</version>
 		</dependency>
-		
+
 		<!-- Scheduler -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -130,7 +130,7 @@
 			<version>1.1</version>
 		</dependency>
 		<!-- Scheduler -->
-		
+
 		<!-- Web Socket -->
 		<dependency>
 			<groupId>org.json</groupId>
@@ -149,7 +149,7 @@
 			<artifactId>javaee-api</artifactId>
 			<version>7.0</version>
 			<scope>provided</scope>
-		</dependency> 
+		</dependency>
 		<!-- Web Socket -->
 		<!-- DB Access Framework - MyBatis -->
 		<dependency>
@@ -163,6 +163,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
-	</dependencies> 
+
+	</dependencies>
 </project>
